--- a/style.css
+++ b/style.css
@@ -1,9 +1,33 @@
+*{
+	font-family: Arial, Sans-serif;
+	color: rgba(0,0,0,0.7);
+	font-size: 0.97em;
+}
+
+a:hover
+{
+	text-decoration: underline;
+}
+
+a:visited
+{
+	color: rgba(0,0,0,0.87);
+}
+
+a 
+{
+	text-decoration: none;
+
+}
+
+
 .navHeader 
 {
 	display : flex;
 	justify-content: flex-end;
 	list-style-type: none;
 	align-items: center;
+	
 }
 
 .navHeader li 
@@ -42,7 +66,14 @@ input
 {
 	width: 600px;
 	height: 30px;
+
 }
+
+input:hover
+{
+	box-shadow: 0px 2px 2px rgba(0,0,0,0.16);
+}
+
 
 .boutton
 {
@@ -51,6 +82,17 @@ input
 	height: 36px;
 	width: 149px;
 	font-size: 0.85em;
+}
+
+.boutton:hover
+{
+	border: 0.5px solid rgba(199, 208, 221, 0.5);
+	color: black;
+}
+
+span.links
+{
+	color: blue ;
 }
 
 footer
